--- a/force-app/main/default/classes/TestClassA.cls
+++ b/force-app/main/default/classes/TestClassA.cls
@@ -2,4 +2,7 @@ public with sharing class TestClassA {
     public TestClassA() {
 
     }
+    private static void bad_Methodname(){
+        //some stuff
+    }
 }
