--- a/force-app/main/default/classes/TestClassA.cls
+++ b/force-app/main/default/classes/TestClassA.cls
@@ -2,8 +2,8 @@ public with sharing class TestClassA {
     public TestClassA() {
 
     }
-    private static void method_1() {
-    // uhoh!
+    private static void method1() {
+    // all good!
     }
 
 }
